--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,24 @@
     "type": "module",
     "scripts": {
         "start": "node app.js",
-        "dev": "nodemon app.js"
+        "dev": "nodemon app.js",
+        "test": "jest --watch"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "dotenv-flow": "^3.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.9",
         "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.12.1",
+        "babel-jest": "^26.6.3",
+        "jest": "^26.6.3",
+        "supertest": "^6.0.1"
     }
 }
